--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>copy me!</h1>
 <h2>what to do</h2>
-<p>use what you've learnt to recreate this message</p>
+<p>use what you've learnt to recreate this message.</p>
