--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCKTYPE html>
 <html>
 <head>
-  <title>FrenchGovermentSuperRealNoCap.Com</title>
+  <title>FrenchGoverment.Com</title>
   </head>
 <body>
 
