--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My illigal Market</title>
+        <title>Illigal Market</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
